# Website-Path-Checker-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-linux.sh  install-macos.sh  install-windows.ps1
include/wpc/: checker.hpp  cli.hpp  config.hpp  console_reporter.hpp  http_client.hpp  models.hpp  path_loader.hpp  runner.hpp
src/: checker.cpp  cli.cpp  config.cpp  console_reporter.cpp  http_client.cpp  main.cpp  path_loader.cpp  runner.cpp
tests/: unit_tests.cpp
